<resources>
    <string name="app_name">goSyncv1.1</string>
    <string name="gosync">goSync</string>
    <string name="welcome">Welcome!!!</string>
    <string name="SaveData">Signup</string>
    <string name="login">Login</string>
    <string name="gosync_is_a_daily_tacking_app_for_projects_startups_companies_for_thier_day_to_work">gosync is a daily tacking app for projects startups companies for thier day to work.</string>
    <string name="todo">TODO</string>
    <string name="please_enter_details">Please Enter Details</string>
    <string name="name">Name</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">Email_Address</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_remember_password">Don\'t Remember Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="dashboard">Dashboard</string>
    <string name="textview">TextView</string>
    <string name="join">Join</string>
    <string name="host">Host</string>
    <string name="enter_the_code">ENTER THE CODE</string>
    <string name="string_enter_the_code" />
    <string name="MobileNumber">PhoneNumber</string>
    <string name="savedata">Savedata</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="communication">Communication</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="about_us">About Us</string>
    <string name="faqs">FAQs</string>
    <string name="signout">SignOut</string>
    <string name="email">Email</string>
    <string name="india">India</string>
    <string name="phone">Phone</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="phone_number">Phone Number</string>
    <string name="change_email">Change Email</string>
    <string name="old_email">Old Email</string>
    <string name="new_email">New Email</string>
    <string name="re_enter_new_email">Re-enter New Email</string>
    <string name="updated_name">Updated Name</string>
    <string name="change_name">Change Name</string>
    <string name="old_name">Old name</string>
    <string name="change_number">Change Number</string>
    <string name="new_username">New Username</string>
    <string name="change">Change</string>
    <string name="new_name">New Name</string>
    <string name="cricketer_name">Cricketer Name</string>
    <string name="add">Add</string>
    <string name="submit_list">Submit List</string>
    <string name="cricketer_list">Cricketer List</string>
    <string name="submit">Submit</string>
    <string name="form">Form</string>


</resources>