<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".JoinActivity">


    <TextView
        android:id="@+id/textView9"
        android:layout_width="299dp"
        android:layout_height="74dp"
        android:background="@drawable/et_login"
        android:fontFamily="cursive"
        android:text="@string/join"
        android:textAlignment="center"
        android:textColor="#F4EFEF"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="211dp"
        android:layout_height="188dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@drawable/pic2"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/button3"
        android:layout_width="318dp"
        android:layout_height="65dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/ro_cor"
        android:fontFamily="sans-serif"
        android:text="@string/join"
        android:textColor="#E1D9D9"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code" />

    <EditText
        android:id="@+id/code"
        android:layout_width="317dp"
        android:layout_height="65dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="44dp"
        android:autofillHints=""
        android:background="@drawable/et_login"
        android:contentDescription="@string/string_enter_the_code"
        android:ems="10"
        android:hint="@string/enter_the_code"
        android:inputType="number|textPersonName"
        android:textColor="#EDE6E6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

</androidx.constraintlayout.widget.ConstraintLayout>