<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    tools:openDrawer="start"
    tools:context=".NavigationActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal_200"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.000"
                app:title="Navigation"
                app:titleTextColor="@color/white"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton

                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E94560"
                android:clickable="true"
                android:contentDescription="@string/todo"
                android:focusable="true"
                android:foregroundTint="#C6BABA"
                android:tint="@android:color/white"
                app:backgroundTint="#F3EDED"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.923"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.943"
                app:srcCompat="@drawable/ic_baseline_add_24" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton2"
                android:layout_width="40dp"
                android:layout_height="41dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:contentDescription="@string/todo"
                android:focusable="true"
                android:tint="#F1E9E9"
                android:visibility="invisible"
                app:fabSize="mini"
                app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
                app:layout_constraintEnd_toEndOf="@+id/floatingActionButton"
                app:srcCompat="@android:drawable/btn_star" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton5"
                android:layout_width="40dp"
                android:layout_height="41dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:contentDescription="@string/todo"
                android:focusable="true"
                android:tint="#F1E9E9"
                android:visibility="invisible"
                app:fabSize="mini"
                app:layout_constraintBottom_toTopOf="@+id/floatingActionButton2"
                app:layout_constraintEnd_toEndOf="@+id/floatingActionButton2"
                app:srcCompat="@android:drawable/btn_star" />


            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="128dp"
                android:fontFamily="monospace"
                android:text="@string/host"
                android:textColor="#F8F6F6"
                android:textSize="18sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/floatingActionButton2" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="188dp"
                android:fontFamily="monospace"
                android:text="@string/join"
                android:textColor="#F6F2F2"
                android:textSize="18sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/floatingActionButton5" />

            <Button
                android:id="@+id/dispay_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Form"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.312" />

            <Button
                android:id="@+id/display_response"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Response"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toolbar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav"
        app:menu="@menu/menu"
        app:headerLayout="@layout/header"
        android:layout_gravity="start"/>


</androidx.drawerlayout.widget.DrawerLayout>